# backeer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
Formula/: backeer.rb
launchd/: com.backeer.prefect-server.plist.template
scripts/: install-prefect-launchagent.sh  replay_audacity.py  replay_download.py  uninstall-prefect-launchagent.sh
src/backeer/: __init__.py  audacity.py  cli.py  config.py  events.py  models.py  prefect_flow.py  subprocesses.py  workflow.py
src/backeer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_audacity.py  test_cli.py  test_config.py  test_events.py  test_models.py  test_subprocesses.py  test_workflow.py
